src/test/deca/context/invalid/pierre/objects/overrideField.deca
class A {
    int a;
}
class B extends A {
    void a; //devra etre remis en float plus tard
}
{}
